--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@fastify/jwt": "^7.2.0",
+    "@prisma/client": "^4.16.1",
     "axios": "^1.4.0",
     "fastify": "^4.19.0",
     "zod": "^3.21.4"
